# procspawn

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: rustfmt.yml  tests.yml
examples/: args.rs  async.rs  bad-serialization.rs  communicating.rs  custom-serialization.rs  join.rs  kill.rs  macro.rs  nested.rs  panic.rs  pool.rs  simple.rs  stdout.rs  timeout.rs
src/: asyncsupport.rs  builder.rs  core.rs  error.rs  json.rs  lib.rs  macros.rs  panic.rs  pool.rs  proc.rs  serde.rs  serdesupport.rs  testsupport.rs
tests/: nested.rs  test_async.rs  test_basic.rs  test_harness.rs  test_macros.rs  test_pool.rs
