[package]
name = "procspawn"
version = "0.9.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "thread::spawn just with processes"
homepage = "https://github.com/mitsuhiko/procspawn"
repository = "https://github.com/mitsuhiko/procspawn"
keywords = ["proc", "spawn", "subprocess"]
readme = "README.md"
autoexamples = true
autotests = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["backtrace", "safe-shared-libraries"]
test-support = ["ctor"]
json = ["serde_json"]
safe-shared-libraries = ["findshlibs"]

[dependencies]
ipc-channel = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
backtrace = { version = "0.3.43", optional = true, features = ["serde"] }
libc = "0.2.66"
ctor = { version = "0.1.20", optional = true }
serde_json = { version = "1.0.47", optional = true }
findshlibs = { version = "0.8.0", optional = true }
futures = { version = "0.3.4", optional = true, default-features = false, features = ["std"] }

[[example]]
name = "panic"
required-features = ["backtrace"]

[[example]]
name = "bad-serialization"
required-features = ["backtrace", "json"]

[[test]]
name = "test_basic"
required-features = ["test-support"]

[[test]]
name = "test_pool"
required-features = ["test-support"]

[[test]]
name = "test_macros"
required-features = ["test-support"]
