[package]
name = "procspawn"
version = "1.0.0"
authors = [
    "Armin Ronacher <armin.ronacher@active-4.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "thread::spawn just with processes"
homepage = "https://github.com/mitsuhiko/procspawn"
repository = "https://github.com/mitsuhiko/procspawn"
keywords = ["proc", "spawn", "subprocess"]
readme = "README.md"
autoexamples = true
autotests = true
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["backtrace", "safe-shared-libraries"]
test-support = ["small_ctor"]
json = ["serde_json"]
safe-shared-libraries = ["findshlibs"]

[dependencies]
ipc-channel = "0.18.2"
serde = { version = "1.0.104", features = ["derive"] }
backtrace = { version = "0.3.73", optional = true, features = ["serde"] }
libc = "0.2.66"
serde_json = { version = "1.0.47", optional = true }
findshlibs = { version = "0.10.2", optional = true }
small_ctor = { version = "0.1.2", optional = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading"] }

[[example]]
name = "panic"
required-features = ["backtrace"]

[[example]]
name = "bad-serialization"
required-features = ["backtrace", "json"]

[[test]]
name = "test_basic"
required-features = ["test-support"]

[[test]]
name = "test_pool"
required-features = ["test-support"]

[[test]]
name = "test_macros"
required-features = ["test-support"]
